[package]
name = "brainfuck_rs"
version = "1.0.0"
edition = "2021"
build = "build.rs"
default-run = "brainfuck"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }

[build-dependencies]
rustsourcebundler = { git = "https://github.com/lpenz/rust-sourcebundler" }

[lib]
name = "brainfuck_rs"
path = "src/lib.rs"

[[bin]]
name = "brainfuck"
path = "src/bin/brainfuck.rs"

[[bin]]
name = "codingame"
path = "src/bin/codingame.rs"
